test_regress/t/t_tagged_union.out
%Warning-SHORTREAL: t/t_tagged_union.v:92:5: Unsupported: shortreal being promoted to real (suggest use real instead)
   92 |     shortreal ShortRealVal;
      |     ^~~~~~~~~
                    ... For warning description see https://verilator.org/warn/SHORTREAL?v=latest
                    ... Use "/* verilator lint_off SHORTREAL */" and lint_on around source to disable this message.
%Warning-ASCRANGE: t/t_tagged_union.v:41:9: Ascending bit range vector: left < right of bit range: [0:31]
                                          : ... note: In instance 't'
   41 |     bit [0:31]    Word32LittleEndian;    
      |         ^
                   ... For warning description see https://verilator.org/warn/ASCRANGE?v=latest
                   ... Use "/* verilator lint_off ASCRANGE */" and lint_on around source to disable this message.
%Warning-ASCRANGE: t/t_tagged_union.v:42:9: Ascending bit range vector: left < right of bit range: [0:15]
                                          : ... note: In instance 't'
   42 |     bit [0:15]    Word16LittleEndian;    
      |         ^
%Warning-ASCRANGE: t/t_tagged_union.v:47:9: Ascending bit range vector: left < right of bit range: [0:59]
                                          : ... note: In instance 't'
   47 |     bit [0:59]    Wide60LittleEndian;    
      |         ^
%Warning-ASCRANGE: t/t_tagged_union.v:48:9: Ascending bit range vector: left < right of bit range: [0:89]
                                          : ... note: In instance 't'
   48 |     bit [0:89]    Wide90LittleEndian;    
      |         ^
%Error: t/t_tagged_union.v:55:20: Unpacked data type 'int$[0:3]' in packed struct/union (IEEE 1800-2023 7.2.1)
                                : ... note: In instance 't'
   55 |     int            UnpackedArr[4];       
      |                    ^~~~~~~~~~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: t/t_tagged_union.v:56:20: Unpacked data type 'bit[31:0]$[0:1][0:2]' in packed struct/union (IEEE 1800-2023 7.2.1)
                                : ... note: In instance 't'
   56 |     bit [31:0]     UnpackedArr2D[2][3];  
      |                    ^~~~~~~~~~~~~
%Error: t/t_tagged_union.v:76:13: Unpacked data type 'chandle' in packed struct/union (IEEE 1800-2023 7.2.1)
                                : ... note: In instance 't'
   76 |     chandle Handle;
      |             ^~~~~~
%Error: t/t_tagged_union.v:82:15: Unpacked data type 'class{}TestClass' in packed struct/union (IEEE 1800-2023 7.2.1)
                                : ... note: In instance 't'
   82 |     TestClass Obj;
      |               ^~~
%Error: t/t_tagged_union.v:91:15: Unpacked data type 'real' in packed struct/union (IEEE 1800-2023 7.2.1)
                                : ... note: In instance 't'
   91 |     real      RealVal;
      |               ^~~~~~~
%Error: t/t_tagged_union.v:92:15: Unpacked data type 'real' in packed struct/union (IEEE 1800-2023 7.2.1)
                                : ... note: In instance 't'
   92 |     shortreal ShortRealVal;
      |               ^~~~~~~~~~~~
%Error: t/t_tagged_union.v:98:12: Unpacked data type 'string' in packed struct/union (IEEE 1800-2023 7.2.1)
                                : ... note: In instance 't'
   98 |     string StrVal;
      |            ^~~~~~
%Error: t/t_tagged_union.v:113:11: Unpacked data type 'event' in packed struct/union (IEEE 1800-2023 7.2.1)
                                 : ... note: In instance 't'
  113 |     event EvtVal;
      |           ^~~~~~
%Error: Exiting due to
